# stttw-photo

./: .env.example  .gitignore  docker-compose.yml
api/: alembic.ini  pyproject.toml
api/app/: auth_utils.py  config.py  database.py  dependencies.py  exif_utils.py  main.py  storage.py  worker.py
api/app/models/: job.py  photo.py  user.py
api/app/routers/: auth.py  photos.py
api/app/schemas/: auth.py  photo.py
api/migrations/: env.py
api/migrations/versions/: 2a830d023fa1_create_photos_table.py  3f5fe84b8c7e_create_users_table.py  6029309d1adf_add_thumbnail_path_to_photos_create_.py
