[project]
name = "stttw-photos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.20",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
]
